# Lab2QRCode

./: .clang-format  .gitignore  404.html  CMakeLists.txt  README.md  generate_version.cmake
.claude/: MCP_README.md  mcp.json
.claude/skills/modern-cpp-refactor/: SKILL.md
.claude/skills/modern-cpp-refactor/scripts/: scan.py
.github/workflows/: build.yaml  deploy-pages.yaml
assets/: index-9u2offs6.js  index-CHI7dn38.css
docs/: mqtt.md  软件设计文档.md
setting/styles/: barcode_widget.qss  camera_widget.qss  frame_widget.qss  message_dialog.qss
src/: BarcodeWidget.cpp  BarcodeWidget.h  CameraConfig.cpp  CameraConfig.h  CameraWidget.cpp  CameraWidget.h  FrameWidget.cpp  FrameWidget.h  LanguageManager.cpp  UpdateChecker.cpp  UpdateChecker.h  about_dialog.cpp  about_dialog.h  commondef.h  convert.h  logging.h  main.cpp
src/components/: UiConfig.cpp  UiConfig.h  beep.cpp  beep.h  message_dialog.cpp
src/mqtt/: MQTTMessageWidget.cpp  MQTTMessageWidget.h  mqtt_client.cpp  mqtt_client.h
src/version_info/: version.h
translations/: app_en_US.ts  app_zh_CN.ts
